--- a/Packageratingapp.ipynb
+++ b/Packageratingapp.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "87af9951",
    "metadata": {},
    "outputs": [
@@ -19,8 +19,39 @@
      "output_type": "stream",
      "text": [
       "👉 Point camera at barcode... (Press 'q' to quit)\n",
+      "✅ Barcode Detected: 8904287001281\n",
       "\n",
-      "❌ No barcode detected. Exiting.\n"
+      "🚀 Starting nutrition search for barcode: 8904287001281\n",
+      "\n",
+      "[1/2] Checking OpenFoodFacts API...\n",
+      "\n",
+      "==================================================\n",
+      "✅ Success! Found data from: OpenFoodFacts\n",
+      "\n",
+      "📦 Product: Pasta Macaroni\n",
+      "🌿 Ingredients: \n",
+      "\n",
+      "--- Nutrition Facts (per 100g) ---\n",
+      "+-------------------+---------+\n",
+      "| Nutrient          |   Value |\n",
+      "+===================+=========+\n",
+      "| Calories (kcal)   |   357   |\n",
+      "+-------------------+---------+\n",
+      "| Fat (g)           |     1   |\n",
+      "+-------------------+---------+\n",
+      "| Saturated Fat (g) |     0.2 |\n",
+      "+-------------------+---------+\n",
+      "| Carbohydrates (g) |    75   |\n",
+      "+-------------------+---------+\n",
+      "| Sugars (g)        |     2   |\n",
+      "+-------------------+---------+\n",
+      "| Protein (g)       |    12   |\n",
+      "+-------------------+---------+\n",
+      "| Sodium (mg)       |     0   |\n",
+      "+-------------------+---------+\n",
+      "\n",
+      "💾 Data successfully saved to: 8904287001281_data.json\n",
+      "==================================================\n"
      ]
     }
    ],
@@ -204,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "fa73d4c8",
    "metadata": {},
    "outputs": [
