--- a/FinalBackend.ipynb
+++ b/FinalBackend.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "f1099da9",
    "metadata": {},
    "outputs": [
@@ -68,7 +68,7 @@
     "\n",
     "# =============== CONFIGURATION ===============\n",
     "# Replace with your actual keys\n",
-    "USDA_API_KEY = \"hIUtavRvs0jwjzyKhFFS6JW2upaabSVX74q0dih0\"  # Get a free key from https://fdc.nal.usda.gov/api-guide.html\n",
+    "USDA_API_KEY = \"YOUR_API_KEY_HERE\"  # Get a free key from https://fdc.nal.usda.gov/api-guide.html\n",
     "\n",
     "# =============== API FUNCTIONS FOR NUTRITION ===============\n",
     "\n",
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "dc05f3b0",
    "metadata": {},
    "outputs": [
@@ -377,7 +377,7 @@
    "source": [
     "import google.generativeai as genai\n",
     "\n",
-    "GEMINI_API_KEY = \"AIzaSyDyCpewLsgJvBkPGN2pFWzo3x_8a_-PP4c\"\n",
+    "GEMINI_API_KEY = \"YOUR_API_KEY_HERE\"\n",
     "genai.configure(api_key=GEMINI_API_KEY)\n"
    ]
   },
@@ -519,14 +519,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "f5141c05",
    "metadata": {},
    "outputs": [],
    "source": [
     "import google.generativeai as genai\n",
     "\n",
-    "genai.configure(api_key=\"AIzaSyDyCpewLsgJvBkPGN2pFWzo3x_8a_-PP4c\")\n",
+    "genai.configure(api_key=\"YOUR_API_KEY_HERE\")\n",
     "\n",
     "def ask_gemini_comment(scored):\n",
     "    prompt = f\"\"\"\n",
